tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_function_on_pub_struct_returns_private/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Bar` is more private than item `bar`
  ┌─ src/main.nr:7:20
  │
7 │             pub fn bar() -> Bar { 
  │                    ---
  │

Aborting due to 1 previous error
